Fix dropdown method wait element, refactoring, clear pom.xml unused dependencies